# windows-launchpad-rust

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  build.rs  diff.patch  old_main.rs  old_main_utf8.rs  run_liquid_glass_studio.cmd  run_screenshot_qa.cmd
.github/ISSUE_TEMPLATE/: feature-or-task.yml
.github/actions/r2-target-cache/: action.yml
.github/actions/setup-r2-sccache/: action.yml
.github/workflows/: main-ci.yml  pr-binary-comment.yml  pr-binary.yml  pr-ci.yml  pr-macos-artifacts.yml  r2-sccache-maintenance.yml  release-assets.yml
.zcode/plans/: plan-sess_e31e4705-d5a2-4a78-9ed1-ae50a0dae201.md
assets/macos/: Info.plist
assets/shaders/: liquid_glass_badge_geometry.wgsl  liquid_glass_blur_downsample.wgsl  liquid_glass_blur_upsample.wgsl  liquid_glass_final.wgsl  liquid_glass_geometry.wgsl  liquid_glass_studio_background.wgsl  liquid_glass_studio_ui.wgsl
docs/: APP_REFRESH.md  BOTTOM_CONTROL.md  CI_CACHE.md  CI_R2_SCCACHE.md  CI_S3_SCCACHE.md  DF_CURRENT_BEHAVIOR_INVENTORY.md  DF_REARCHITECTURE_LOG.md  DF_REARCHITECTURE_PLAN.md  EDIT_MODE_VISUAL_QA.md  FOLDER_INTERACTION.md  GLASS_FOCUS_VEIL.md  GPU_SEQUENCE_QA.md  HOTKEY_DESIGN.md  ICON_CACHE.md  KEYBINDINGS.md  LIQUID_GLASS.md  LIQUID_GLASS_STUDIO.md  MACOS_DEVELOPMENT.md  PHASE8_FOLDER_GOAL.md  PHASE8_FOLDER_MOTION_IMAGE_PROMPT.json  PROFILING_EVALUATION.md  README.md  SETTINGS_GOAL.md  STARTUP_PERFORMANCE.md  TROUBLESHOOTING.md
qa/: app_between_folders.json  edit_drag_wiggle_continuity.json  folder_child_exit.json  folder_child_page_drag.json  folder_creation.json  folder_existing_drop.json  folder_interactions.json  folder_page_scroll.json  folder_single_page_scroll.json  folder_top_level_drag.json  grid_vertical_reorder.json
scripts/: macos_animated_backdrop.swift  profile_macos.sh  summarize_macos_profile.py  verify_qa_artifact.py
src/: anim.rs  app_diff.rs  app_icon.rs  app_registry.rs  app_scan.rs  bottom_control.rs  debug_logger.rs  grid.rs  icon_atlas.rs  icon_cache.rs  icon_pipeline.rs  icon_worker.rs  launch.rs  lib.rs  main.rs  platform_windows.rs  qa.rs  refresh_watcher.rs  renderer.rs  scroll.rs  settings.rs  shader.wgsl  shader_control.wgsl  shader_control_text.wgsl  shader_focus_blur.wgsl  shader_icon.wgsl  shader_presentation.wgsl  shader_text.wgsl  shader_text_shadow_blur.wgsl  shader_text_shadow_composite.wgsl  startup_timer.rs  text.rs
src/app/: action.rs  command.rs  event.rs  frame.rs  handler.rs  input.rs  mod.rs  render.rs  state.rs  update.rs
src/app/render/: controls.rs  folders.rs  grid.rs  helpers.rs  icons.rs  mod.rs  settings.rs
src/domain/: app_diff.rs  app_id.rs  app_registry.rs  folders.rs  launcher_item.rs  launcher_state.rs  mod.rs  settings.rs
src/features/: mod.rs
src/features/bottom_control/: mod.rs
src/features/edit_mode/: mod.rs  state.rs  tests.rs
src/features/folders/: mod.rs
src/icons/: extract.rs  loader.rs  mod.rs  normalize.rs
src/layout/: bottom_control.rs  control_geometry.rs  edit_mode.rs  focus_veil.rs  folder_panel.rs  grid.rs  hit_map.rs  mod.rs  settings_panel.rs
src/liquid_glass/: capture.rs  geometry.rs  macos_capture.rs  mod.rs  params.rs  renderer.rs  windows_capture.rs
src/liquid_glass/renderer/: frame.rs  resources.rs
src/platform/: launch.rs  mod.rs  paths.rs  windows.rs
src/platform/macos/: apps.rs  integration.rs  mod.rs
src/renderer/: badges.rs  controls.rs  counters.rs  focus_blur.rs  frame.rs  glass.rs  gpu_profile.rs  icon_pipeline.rs  icons.rs  init.rs  mod.rs  prepare.rs  presentation.rs  resources.rs  text.rs  text_engine.rs  text_shadow.rs  tiles.rs
src/ui_model/: geometry.rs  grid.rs  hit.rs  ids.rs  mod.rs  render_model.rs  text.rs
src/workers/: app_scan.rs  icon_worker.rs  mod.rs  refresh_watcher.rs  steam_scan.rs
tests/: architecture_boundaries.rs  launcher_domain_integration.rs  wgsl_validation.rs
tools/: make_test_lnk.ps1
