[package]
name = "launchpad-windows"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "A GPU-accelerated, macOS Launchpad-style app launcher for Windows."

[dependencies]
wgpu = "29"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
glam = "0.29"
env_logger = "0.11"
cosmic-text = "0.19"
image = { version = "0.25", default-features = false, features = ["png", "bmp", "jpeg"] }
windows = { version = "0.62", features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Environment",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Storage_FileSystem",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }

# Release: keep optimized rendering without LTO; this avoids rustc/MSVC
# STATUS_ACCESS_VIOLATION crashes seen in wgpu/naga linker-plugin-lto builds.
[profile.release]
lto = false
codegen-units = 1
panic = "abort"
