[package]
name = "launchpad-windows"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "A GPU-accelerated, macOS Launchpad-style app launcher for Windows."
default-run = "launchpad-windows"

[features]
default = []
gpu-profile = ["dep:wgpu-profiler"]

[dependencies]
wgpu = "29"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
glam = "0.29"
env_logger = "0.11"
cosmic-text = "0.19"
image = { version = "0.25", default-features = false, features = ["png", "bmp", "jpeg", "ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu-profiler = { version = "0.27", optional = true }

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
windows = { version = "0.62", features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Environment",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Storage_FileSystem",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.7.0"
icns = "0.3.1"
plist = "1.7.0"
rusqlite = "0.32"
screencapturekit = { version = "=1.3.0", features = ["macos_14_0"] }
tray-icon = { version = "0.21.2", default-features = false }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Release: keep optimized rendering without LTO; this avoids rustc/MSVC
# STATUS_ACCESS_VIOLATION crashes seen in wgpu/naga linker-plugin-lto builds.
[profile.release]
lto = false
codegen-units = 1
panic = "abort"
